# VRC_Controller

./: .gitignore  LICENSE.md  README.md  pyproject.toml
examples/: cli_client.py  custom_dication.py
src/vrc_controller/: __init__.py  constants.py  osc.py  singletons.py  sounds.py
